deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-deployment
  labels:
    app: web

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: mini-container
          image: bhuvana20/mini:v1.0.0
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: mini-service

spec:
  selector:
    app: web

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30008

  type: NodePort
