fit-dep.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bhuvana-app
  labels:
    app: bhuvana-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: bhuvana-app

  template:
    metadata:
      labels:
        app: bhuvana-app

    spec:
      containers:
        - name: bhuvana-container
          image: bhuvana20/fit:v1.0.0
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: bhuvana-service

spec:
  selector:
    app: bhuvana-app

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
