fit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bhuvana-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bhuvana-service
                port:
                  number: 5000
